--- a/HTML5/css/styles.css
+++ b/HTML5/css/styles.css
@@ -28,5 +28,15 @@ nav a:hover {
 h1, h2, h3, footer {
     text-align: center;
 }
+<style>
+            body {
+               background-color: cadetblue;
+            }
 
+            img{
+               display: block;
+               margin: 20px auto;
+               width: 600px;
+            }
+       </style>
 
