--- a/Responsive/css/styles.css
+++ b/Responsive/css/styles.css
@@ -91,7 +91,7 @@ padding: 0;
 
 /* Desktop Styles */
 
-@media (min-width 1024px) {
+@media (min-width: 1024px) {
     #container {
         width: 65%;
         margin: 20px auto;
